--- a/milky-dependencies/pom.xml
+++ b/milky-dependencies/pom.xml
@@ -17,7 +17,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <revision>0.0.5-SNAPSHOT</revision>
+        <revision>0.0.5</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
