adjust base query structure

--- a/lombok.config
+++ b/lombok.config
@@ -1,1 +1,4 @@
 lombok.log.custom.declaration=com.stellariver.milky.common.tool.log.Logger com.stellariver.milky.common.tool.log.Logger.getLogger(TYPE)
+lombok.tostring.callsuper=CALL
+lombok.equalsandhashcode.callsuper=CALL
+lombok.fielddefaults.defaultprivate
