--- a/pom.xml
+++ b/pom.xml
@@ -126,17 +126,6 @@
                 <artifactId>cglib-nodep</artifactId>
                 <version>3.3.0</version>
             </dependency>
-
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct</artifactId>
-                <version>${org.mapstruct.version}</version>
-            </dependency>
             <!--utils end-->
 
             <!-- code generation start-->
@@ -151,7 +140,6 @@
                 <version>${org.mapstruct.version}</version>
             </dependency>
             <!-- code generation end-->
-
 
             <!--infrastructure-base start-->
             <dependency>
@@ -175,6 +163,11 @@
                 <version>1.8.4</version>
             </dependency>
             <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>1.2.12</version>
+            </dependency>
+            <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.29</version>
@@ -189,6 +182,7 @@
                 <artifactId>mybatis-plus-annotation</artifactId>
                 <version>3.5.1</version>
             </dependency>
+            <!--infrastructure-base end-->
         </dependencies>
     </dependencyManagement>
 
