--- a/infrastructure-base/pom.xml
+++ b/infrastructure-base/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>mybatis-plus-annotation</artifactId>
         </dependency>
         <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
