adjust base query structure

--- a/spring-partner/pom.xml
+++ b/spring-partner/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>domain-support</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
