adjust base query structure

--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
