--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -84,6 +84,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
