--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
