--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
                 <artifactId>cglib-nodep</artifactId>
                 <version>3.3.0</version>
             </dependency>
+            <dependency>
+                <groupId>io.github.resilience4j</groupId>
+                <artifactId>resilience4j-circuitbreaker</artifactId>
+                <version>1.3.1</version>
+            </dependency>
             <!--utils end-->
 
             <!-- code generation start-->
@@ -181,6 +186,16 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-annotation</artifactId>
                 <version>3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-extension</artifactId>
+                <version>3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.vertical-blank</groupId>
+                <artifactId>sql-formatter</artifactId>
+                <version>2.0.3</version>
             </dependency>
             <!--infrastructure-base end-->
         </dependencies>
