druid data source

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,10 +1,29 @@
-mybatis.base.mapper-location=mapper/*.xml
-mybatis.base.type-handlers-package=com.stellariver.milky.demo.infrastructure.database.handler
-mybatis.base.type-aliases-package=com.stellariver.milky.demo.infrastructure.database.entity
-mybatis.base.type-enums-package=com.stellariver.milky.demo.common.enum
 
-mybatis-plus.global-config.db-config.logic-delete-field=deleted
-mybatis-plus.global-config.db-config.logic-delete-value=1L
-mybatis-plus.global-config.db-config.logic-not-delete-value=0L
+server.port=80
 
-logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=debug
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.min-idle=10
+spring.datasource.druid.max-active=50
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.time-between-eviction-runs-millis=6000
+spring.datasource.druid.min-evictable-idle-time-millis=30000
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+
+spring.datasource.druid.filter.stat.log-slow-sql=true
+spring.datasource.druid.filter.stat.merge-sql=true
+spring.datasource.druid.filter.stat.slow-sql-millis=1
+spring.datasource.druid.filter.stat.db-type=h2
+spring.datasource.druid.filter.stat.enabled=true
+
+spring.datasource.druid.filter.wall.config.multi-statement-allow=true
+spring.datasource.druid.filter.wall.config.delete-allow=false
+
+spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
+spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
+
+logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=ERROR
