add console out of log4j2.xml for milky_class milky_method and milky_line

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -26,4 +26,4 @@ spring.datasource.druid.filter.wall.config.delete-allow=false
 spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
 spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
 
-logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=ERROR
+logging.level.com.stellariver=DEBUG
