--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>3.19.1</version>
             </dependency>
+            <dependency>
+                <groupId>it.ozimov</groupId>
+                <artifactId>embedded-redis</artifactId>
+                <version>0.7.3</version>
+            </dependency>
             <!--infrastructure-base end-->
         </dependencies>
     </dependencyManagement>
