--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -59,6 +59,10 @@
         </dependency>
         <dependency>
             <groupId>com.stellariver.milky</groupId>
+            <artifactId>validate-tool</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.stellariver.milky</groupId>
             <artifactId>common-tool</artifactId>
         </dependency>
         <dependency>
