--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>common-base</module>
+        <module>validate-tool</module>
         <module>common-tool</module>
         <module>domain-support</module>
         <module>milky-spring-boot-starter</module>
@@ -32,6 +33,7 @@
         <lombok.version>1.18.22</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <jacoco.version>0.8.3</jacoco.version>
+        <aspectj.version>1.9.7</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -57,6 +59,11 @@
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>domain-support</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.stellariver.milky</groupId>
+                <artifactId>validate-tool</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
