--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,12 +11,13 @@ spring.datasource.druid.max-wait=60000
 spring.datasource.druid.time-between-eviction-runs-millis=6000
 spring.datasource.druid.min-evictable-idle-time-millis=30000
 spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.validation-query=select 'x'
 spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
 
 spring.datasource.druid.filter.stat.log-slow-sql=true
 spring.datasource.druid.filter.stat.merge-sql=true
-spring.datasource.druid.filter.stat.slow-sql-millis=1
+spring.datasource.druid.filter.stat.slow-sql-millis=10
 spring.datasource.druid.filter.stat.db-type=h2
 spring.datasource.druid.filter.stat.enabled=true
 
@@ -26,4 +27,4 @@ spring.datasource.druid.filter.wall.config.delete-allow=false
 spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
 spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
 
-logging.level.com.stellariver=DEBUG
+logging.level.com.stellariver=WARN
