--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,14 @@
 <!--        </dependency>-->
 <!--    </dependencies>-->
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
     <name>milky</name>
     <url>https://github.com/chuanghou/milky</url>
     <description>A simple ddd framework</description>
