--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.datasource.druid.filter.wall.config.delete-allow=false
 spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
 spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
 
-logging.level.com.stellariver=WARN
+logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=ERROR
