add inherit command handler support

--- a/domain-support/pom.xml
+++ b/domain-support/pom.xml
@@ -26,5 +26,9 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>reflectasm</artifactId>
+        </dependency>
     </dependencies>
 </project>
