jacoco 与 reflectasm 兼容

--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,9 @@
                 <version>${jacoco.version}</version>
                 <configuration>
                     <dataFile>target/jacoco.exec</dataFile>
+                    <excludes>
+                        <exclude>**/*MethodAccess*</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
