--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </modules>
 
     <properties>
-        <revision>0.1.5</revision>
+        <revision>0.1.6-SNAPSHOT</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring.boot.version>2.7.7</spring.boot.version>
