--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -120,6 +120,11 @@
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.atlassian.util.concurrent</groupId>
+            <artifactId>atlassian-util-concurrent</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
