--- a/pom.xml
+++ b/pom.xml
@@ -151,11 +151,6 @@
                 <artifactId>resilience4j-circuitbreaker</artifactId>
                 <version>1.3.1</version>
             </dependency>
-            <dependency>
-                <groupId>io.atlassian.util.concurrent</groupId>
-                <artifactId>atlassian-util-concurrent</artifactId>
-                <version>4.0.1</version>
-            </dependency>
             <!--utils end-->
 
             <!-- code generation start-->
@@ -237,19 +232,15 @@
         </dependencies>
     </dependencyManagement>
 
-<!--    &lt;!&ndash;    不加这个依赖，mvn test 会失败，但是直接用idea可以过，简直是神奇，肯定是idea干了啥事   &ndash;&gt;-->
-<!--    <dependencies>-->
-<!--        <dependency>-->
-<!--            <groupId>org.mapstruct</groupId>-->
-<!--            <artifactId>mapstruct-processor</artifactId>-->
-<!--            <version>${org.mapstruct.version}</version>-->
-<!--        </dependency>-->
-<!--    </dependencies>-->
-
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
             <optional>true</optional>
         </dependency>
     </dependencies>
