--- a/milky-dependencies/pom.xml
+++ b/milky-dependencies/pom.xml
@@ -15,46 +15,51 @@
     <artifactId>milky-dependencies</artifactId>
 
     <packaging>pom</packaging>
-
-
     <dependencyManagement>
         <dependencies>
+            <!-- milky modules -->
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>spring-partner</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>common-base</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>domain-support</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>validate-tool</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>common-tool</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>infrastructure-base</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.stellariver.milky</groupId>
+                <artifactId>financial-base</artifactId>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>milky-spring-boot-starter</artifactId>
-                <version>${project.version}</version>
+                <version>${revision}</version>
             </dependency>
 
+            <!--utils start need to be update dependencies-->
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
@@ -93,7 +98,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-text</artifactId>
-                <version>1.8</version>
+                <version>1.10.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -105,7 +110,21 @@
                 <artifactId>cglib-nodep</artifactId>
                 <version>3.3.0</version>
             </dependency>
-
+            <dependency>
+                <groupId>io.github.resilience4j</groupId>
+                <artifactId>resilience4j-circuitbreaker</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>objenesis</artifactId>
+                <version>3.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.vertical-blank</groupId>
+                <artifactId>sql-formatter</artifactId>
+                <version>2.0.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
