--- a/aspectj-tool/pom.xml
+++ b/aspectj-tool/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stellariver.milky</groupId>
-    <artifactId>validate-tool</artifactId>
+    <artifactId>aspectj-tool</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
