--- a/demo/application/pom.xml
+++ b/demo/application/pom.xml
@@ -10,10 +10,9 @@
     <groupId>com.stellariver.milky.demo</groupId>
     <artifactId>application</artifactId>
 
-    <name>application</name>
-    <url>http://maven.apache.org</url>
-
     <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
